chore(): 底部按钮设置右边,在chorme84浏览器里会被display:grid;justify-content: start;覆盖导致按钮一直在左边

--- a/bricks/containers/src/page-view/styles.shadow.css
+++ b/bricks/containers/src/page-view/styles.shadow.css
@@ -78,6 +78,7 @@
   align-items: center;
   gap: var(--toolbar-button-gap);
   height: var(--local-footer-height);
+  position: relative;
 }
 
 :host([show-footer]) .footer {
