--- a/bricks/data-view/src/globe-earth-indicator/styles.shadow.css
+++ b/bricks/data-view/src/globe-earth-indicator/styles.shadow.css
@@ -1,16 +1,7 @@
-:host,
-.circle-container,
-.ring-container,
-.video-container,
-.center {
+:host {
   display: flex;
   align-items: center;
   justify-content: center;
-}
-
-:host {
-  position: relative;
-  color: #fff;
   height: 100%;
 }
 
@@ -18,22 +9,60 @@
   display: none;
 }
 
-* {
-  box-sizing: border-box;
-}
-
-.circle-container {
-  width: 604px;
-  height: 604px;
-  padding: 16px;
+.container {
+  width: 928px;
+  height: 534px;
   position: relative;
-  background: url(./assets/circle-bg.png) no-repeat;
-  background-position: center;
-  background-size: 572px;
   transform-origin: center;
   transform: scale(var(--scale));
 
   --scale: 1;
+}
+
+.base,
+.globe,
+.ring,
+.ring-labels {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.base {
+  width: 1312px;
+  height: 575px;
+  bottom: 0;
+  background-image: url(./assets/base.png);
+  background-repeat: no-repeat;
+  background-position: center bottom -173px;
+  background-size: 100%;
+}
+
+.globe {
+  width: 272px;
+  height: 272px;
+  background-image: url(./assets/globe.png);
+  background-repeat: no-repeat;
+  background-size: 100% 100%;
+  background-position: center;
+  bottom: 228px;
+}
+
+.ring {
+  top: 0;
+}
+
+.particles {
+  mix-blend-mode: screen;
+  position: absolute;
+  bottom: 204px;
+  left: 50%;
+  transform: translate(-50%, 0);
+}
+
+.ring-labels {
+  top: 0;
+  width: 928px;
 }
 
 .ring-label-container {
@@ -47,6 +76,7 @@
   position: absolute;
   width: 36px;
   height: 36px;
+  background-image: url(../crystal-ball-indicator/assets/green-dot.png);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: 0 0;
@@ -59,12 +89,10 @@
 }
 
 .odd .ring-icon {
-  background-image: url(./assets/blue-dot.png);
   right: -18px;
 }
 
 .even .ring-icon {
-  background-image: url(./assets/green-dot.png);
   left: -18px;
 }
 
@@ -81,9 +109,10 @@
 
 .center {
   position: absolute;
+  top: 120px;
   width: 100%;
-  height: 100%;
-  flex-direction: column;
+  height: 272px;
+  text-align: center;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
@@ -95,36 +124,14 @@
 .center-label {
   font-size: 24px;
   font-weight: 600;
+  line-height: 33px;
 }
 
 .center-value {
-  font-family: PangMenZhengDaoBiaoTiTi;
-  font-size: 64px;
-}
-
-.ring-container {
-  position: relative;
-  width: 408px;
-  height: 408px;
-}
-
-.video-container {
-  border-radius: 9999px;
-  width: 292px;
-  height: 292px;
-  overflow: hidden;
-}
-
-.ring {
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  top: 0;
-  left: 0;
-  background: url(./assets/ring-arc.png) no-repeat;
-  background-size: 100% 100%;
-  background-position: 0 0;
-  animation: ring-rotate 5s linear infinite;
+  font-family: ALiBaBaPuHuiTi;
+  font-weight: bold;
+  font-size: 60px;
+  line-height: 82px;
 }
 
 .corner {
@@ -147,14 +154,4 @@
 .corner-value {
   display: block;
   margin-left: 19px;
-}
-
-@keyframes ring-rotate {
-  from {
-    transform: rotate(0deg);
-  }
-
-  to {
-    transform: rotate(360deg);
-  }
 }
