--- a/bricks/containers/src/page-view/styles.shadow.css
+++ b/bricks/containers/src/page-view/styles.shadow.css
@@ -80,6 +80,10 @@
   height: var(--local-footer-height);
 }
 
+:host([reversed-footer]) .footer > eo-narrow-view {
+  justify-content: end;
+}
+
 :host([show-footer]) .footer {
   display: block;
 }
@@ -90,5 +94,9 @@
     display: grid;
     grid-auto-flow: column;
     justify-content: start;
+  }
+
+  :host([reversed-footer]) .footer > eo-narrow-view {
+    justify-content: end;
   }
 }
