refactor(): make corner indicator as shared

--- a/bricks/data-view/src/globe-with-halo-indicator/styles.shadow.css
+++ b/bricks/data-view/src/globe-with-halo-indicator/styles.shadow.css
@@ -22,6 +22,7 @@
 
 .base,
 .globe,
+.satellite-ring,
 .ring,
 .ring-labels {
   position: absolute;
@@ -49,6 +50,7 @@
   bottom: 228px;
 }
 
+.satellite-ring,
 .ring {
   top: 0;
 }
