--- a/bricks/data-view/src/globe-with-halo-indicator/styles.shadow.css
+++ b/bricks/data-view/src/globe-with-halo-indicator/styles.shadow.css
@@ -100,7 +100,7 @@
 }
 
 .ring-label {
-  color: #c8e2ff;
+  color: rgba(200, 226, 255, 0.8);
   font-size: 18px;
 }
 
@@ -114,7 +114,6 @@
   position: absolute;
   top: 120px;
   width: 100%;
-  height: 272px;
   text-align: center;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
