--- a/bricks/data-view/src/crystal-ball-indicator/styles.shadow.css
+++ b/bricks/data-view/src/crystal-ball-indicator/styles.shadow.css
@@ -96,8 +96,11 @@
 
 .center {
   position: absolute;
-  width: 100%;
-  height: 100%;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  width: 292px;
+  height: 292px;
   flex-direction: column;
   text-shadow: 0px 2px 4px rgba(0, 0, 0, 0.5);
 }
