--- a/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
+++ b/bricks/nav/src/directory-tree/directory-tree-leaf/styles.shadow.css
@@ -13,49 +13,67 @@
   user-select: none;
   cursor: pointer;
   border-radius: 3px;
+}
 
-  &:hover .tree-item-label {
-    color: var(--palette-blue-4) !important;
-  }
+.tree-item-indentation {
+  flex-shrink: 0;
+}
 
-  .tree-item-indentation {
-    flex-shrink: 0;
-  }
+.tree-item-content {
+  min-width: 0;
+  flex: 1;
+  display: flex;
+  align-items: center;
+}
 
-  .tree-item-content {
-    min-width: 0;
-    flex: 1;
-    display: flex;
-    align-items: center;
+.tree-item-icon,
+.tree-item-expand-button {
+  padding: 3px;
+  width: 12px;
+  height: 12px;
+  font-size: 12px;
+  flex-shrink: 0;
+}
 
-    .tree-item-expand-button {
-      padding: 4px;
-      margin: 0 4px;
-      width: 10px;
-      flex-shrink: 0;
-    }
+.tree-item-icon,
+.tree-item-label {
+  color: var(--color-header-text);
+}
 
-    .tree-item-label {
-      color: var(--color-header-text);
-      min-width: 0;
-      flex: 1;
-      overflow: hidden;
-      white-space: nowrap;
-      text-overflow: ellipsis;
-    }
-  }
+.tree-item-icon {
+  margin-right: 4px;
+}
 
-  .tree-item-suffix {
-    flex-shrink: 0;
+.tree-item-expand-button {
+  margin: 0 4px;
+}
+
+.tree-item-label {
+  min-width: 0;
+  flex: 1;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
+.tree-item-suffix {
+  flex-shrink: 0;
+}
+
+:host([selected]) .tree-item {
+  background-color: var(--palette-blue-1);
+}
+
+:host([faded]) {
+  .tree-item-icon,
+  .tree-item-label {
+    color: var(--color-disabled-text);
   }
 }
 
-:host([selected]) {
-  .tree-item {
-    background-color: var(--palette-blue-1);
-  }
-
-  .tree-item:hover .tree-item-label {
-    color: var(--color-header-text) !important;
+:host(:not([selected])) .tree-item:hover {
+  .tree-item-icon,
+  .tree-item-label {
+    color: var(--palette-blue-4);
   }
 }
