--- a/bricks/data-view/src/china-map/styles.shadow.css
+++ b/bricks/data-view/src/china-map/styles.shadow.css
@@ -1,7 +1,11 @@
-:host {
+:host,
+.message {
   display: flex;
   align-items: center;
   justify-content: center;
+}
+
+:host {
   position: relative;
   color: #fff;
   height: 100%;
@@ -23,11 +27,20 @@
 }
 
 canvas,
+.message,
 .labels {
   position: absolute;
   left: 50%;
   transform: translate(-50%, 0);
   top: 0;
+}
+
+.loading {
+  font-size: 48px;
+}
+
+.error {
+  color: var(--color-error);
 }
 
 .label {
