fix(): use `transform: none` instead of `transform: (0, 0)`

--- a/bricks/containers/src/drawer/drawer.shadow.css
+++ b/bricks/containers/src/drawer/drawer.shadow.css
@@ -116,7 +116,7 @@
 .drawer.open .drawer-wrapper-right,
 .drawer.open .drawer-wrapper-bottom,
 .drawer.open .drawer-wrapper-top {
-  transform: translate(0, 0);
+  transform: none;
 }
 
 .drawer-content {
