--- a/bricks/basic/src/data-providers/show-dialog/dialog.module.css
+++ b/bricks/basic/src/data-providers/show-dialog/dialog.module.css
@@ -1,3 +1,7 @@
+.dialog {
+  --show-dialog-border-radius: 6px;
+}
+
 .dialog::part(header-actions) {
   display: none;
 }
@@ -9,7 +13,7 @@
 .dialog::part(panel) {
   position: relative;
   top: 100px;
-  border-radius: 6px;
+  border-radius: var(--show-dialog-border-radius);
   max-height: calc(100% - 80px - var(--sl-spacing-2x-large));
 }
 
@@ -58,7 +62,8 @@
 sl-dialog::part(footer) {
   background: var(--color-fill-bg-base-3);
   padding: 14px 20px;
-  border-radius: 0 0 6px 6px;
+  border-radius: 0 0 var(--show-dialog-border-radius)
+    var(--show-dialog-border-radius);
 }
 
 sl-dialog > eo-button[slot="footer"]:not(:first-of-type) {
@@ -70,4 +75,17 @@ sl-dialog > eo-button[slot="footer"]:not(:first-of-type) {
   color: var(--palette-red-6);
   background-color: var(--palette-red-1);
   border-radius: 2px;
+}
+
+.dialog.elevo {
+  --show-dialog-border-radius: 12px;
+
+  box-shadow:
+    0px 9px 28px 8px rgba(0, 0, 0, 0.05),
+    0px 6px 16px 0px rgba(0, 0, 0, 0.08),
+    0px 3px 6px -4px rgba(0, 0, 0, 0.12);
+
+  &::part(footer) {
+    background: none;
+  }
 }
