--- a/bricks/basic/src/list/styles.shadow.css
+++ b/bricks/basic/src/list/styles.shadow.css
@@ -117,6 +117,12 @@
   .color-17 {
     --icon-color-rgb: 232, 151, 22;
   }
+  .color-18 {
+    --icon-color-rgb: 118, 166, 245;
+  }
+  .color-19 {
+    --icon-color-rgb: 79, 105, 255;
+  }
 
   .title {
     color: #2f3741;
