--- a/bricks/containers/src/modal/modal.shadow.css
+++ b/bricks/containers/src/modal/modal.shadow.css
@@ -96,3 +96,23 @@
 .modal-footer-buttons {
   margin-left: auto;
 }
+
+:host([theme-variant="elevo"]) {
+  .modal-container {
+    border-radius: 12px;
+
+    box-shadow:
+      0px 9px 28px 8px rgba(0, 0, 0, 0.05),
+      0px 6px 16px 0px rgba(0, 0, 0, 0.08),
+      0px 3px 6px -4px rgba(0, 0, 0, 0.12);
+  }
+
+  .modal-header {
+    border-bottom: 0;
+  }
+
+  .modal-footer {
+    border-radius: 0 0 12px 12px;
+    background: none;
+  }
+}
