fix(tag): fix alignment when tag content is empty

--- a/bricks/basic/src/tag/tag.shadow.css
+++ b/bricks/basic/src/tag/tag.shadow.css
@@ -12,6 +12,7 @@
 
 .tag {
   display: inline-block;
+  vertical-align: middle;
   box-sizing: border-box;
   color: var(--antd-text-color);
   list-style: none;
