--- a/bricks/containers/src/drawer/drawer.shadow.css
+++ b/bricks/containers/src/drawer/drawer.shadow.css
@@ -1,3 +1,15 @@
+:host {
+  --eo-drawer-inset-gap: 0px;
+}
+
+:host([theme-variant="elevo"]) {
+  --eo-drawer-inset-gap: 20px;
+}
+
+* {
+  box-sizing: border-box;
+}
+
 .drawer {
   position: fixed;
   z-index: 1000;
@@ -38,7 +50,7 @@
 }
 
 .mask,
-.drawer-wrapper {
+.drawer-content {
   pointer-events: auto;
 }
 
@@ -75,10 +87,10 @@
   position: absolute;
   width: 100%;
   height: 100%;
-  background: var(--antd-component-background);
+  padding: var(--eo-drawer-inset-gap);
 }
 
-.drawer.open .drawer-wrapper {
+.drawer.open .drawer-content {
   box-shadow:
     -6px 0 16px -8px rgb(0 0 0 / 8%),
     -9px 0 28px 0 rgb(0 0 0 / 5%),
@@ -130,20 +142,29 @@
   width: 100%;
   height: 100%;
   outline: 0;
+  background: var(--antd-component-background);
 }
 
 .drawer-header {
   display: flex;
   justify-content: space-between;
+  align-items: start;
   padding: 12px 24px;
   border-bottom: 1px solid var(--palette-gray-4);
 }
 
-.drawer-header-left,
+.title-wrapper,
 .drawer-header-right {
   display: flex;
   align-items: center;
   gap: 4px;
+}
+
+.sub-title {
+  color: #8c8c8c;
+  font-size: 13px;
+  line-height: 24px;
+  margin-bottom: 5px;
 }
 
 .close-btn {
@@ -173,5 +194,33 @@
   padding: 12px 24px;
   border-top: 1px solid var(--palette-gray-4);
   background: var(--color-fill-bg-base-3);
-  box-sizing: border-box;
+}
+
+:host([theme-variant="elevo"]) {
+  color: #262626;
+
+  .drawer.open .drawer-content {
+    box-shadow: 0px 4px 18px 0px rgba(0, 0, 0, 0.15);
+    border-radius: 8px;
+  }
+
+  .drawer-header {
+    padding: 20px 24px;
+    border-bottom: none;
+  }
+
+  .drawer-title {
+    font-size: 18px;
+    line-height: 28px;
+  }
+
+  .drawer-body {
+    padding-top: 10px;
+  }
+
+  .drawer-footer {
+    border-top-color: #e8e8e8;
+    background: none;
+    padding: 20px 24px;
+  }
 }
