--- a/bricks/containers/src/modal/modal.shadow.css
+++ b/bricks/containers/src/modal/modal.shadow.css
@@ -54,6 +54,27 @@
   outline: 0;
 }
 
+.modal.has-sidebar .modal-container {
+  display: flex;
+}
+
+.modal-sidebar {
+  display: none;
+}
+
+.modal.has-sidebar .modal-sidebar {
+  display: block;
+  border-right: 1px solid var(--palette-gray-4);
+  min-width: 220px;
+}
+
+.modal-main-content {
+  flex: 1;
+  display: flex;
+  flex-direction: column;
+  min-width: 0;
+}
+
 .modal-header {
   display: flex;
   justify-content: space-between;
@@ -79,6 +100,11 @@
 
 .modal-body.fullscreen {
   height: calc(100vh - 198px);
+  overflow: auto;
+}
+
+.modal.has-sidebar .modal-body {
+  flex: 1;
   overflow: auto;
 }
 
