--- a/bricks/containers/src/modal/modal.shadow.css
+++ b/bricks/containers/src/modal/modal.shadow.css
@@ -134,11 +134,6 @@
   }
 }
 
-.fullscreen {
-  top: 24px;
-  max-height: calc(100vh - 48px);
-}
-
 :host([theme-variant="elevo"]) {
   .modal-container {
     border-radius: 12px;
@@ -171,4 +166,23 @@
 
 :host([theme-variant="elevo"][header-bordered]) .modal-header {
   border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+}
+
+.fullscreen,
+.centered {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 24px;
+
+  .modal {
+    position: static;
+    top: auto;
+    margin: 0;
+    padding: 0;
+  }
+
+  .has-height {
+    max-height: 100%;
+  }
 }
