fix(): close show-dialog增加expectSuffixContent参数 Closes CMDB_INSTANCE-3474

--- a/bricks/basic/src/data-providers/show-dialog/dialog.module.css
+++ b/bricks/basic/src/data-providers/show-dialog/dialog.module.css
@@ -89,3 +89,7 @@ sl-dialog > eo-button[slot="footer"]:not(:first-of-type) {
     background: none;
   }
 }
+
+.expectSuffix {
+  color: var(--palette-gray-7);
+}
